Add minedia desc & contact inf

--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
 
 <body>
   <h1>JHIH-CING LI 李至青</h1>
-  <h2>Web Developer in Tainan, Taiwan</h2>
-  <p>I am a student major in CS, NCKU and a web developer currently living in Tainan, Tainan. My interests range from photography to
-    graphic design. And I focus on web development.
+  <h3>Web Developer in Tainan, Taiwan</h3>
+  <p>I am a student major in CS, NCKU and a web developer currently living in Tainan, Tainan. My interests range from photography
+    to graphic design. And I focus on web development.
   </p>
+  <a href="mailto:dino8556@gmail.com">
+    <strong>Contact Me</strong>
+  </a>
+  <hr>
   <h3>Projects</h3>
   <ul>
-    <li><a href="https://minedia.info">Minedia</a></li>
+    <li>
+      <a href="https://minedia.info">
+        Minedia
+      </a>
+      <p>
+        Discover the trending news in Taiwan, Analysis the medias and Realize their viewpoint.
+      </p>
+    </li>
   </ul>
 </body>
 <style>
@@ -28,24 +39,39 @@
     letter-spacing: 0.2px;
   }
 
-  h1, h2 {
+  h1,
+  h2 {
     word-spacing: 4px;
   }
 
-  p{
+  body {
+    text-align: center;
+    background-color: #fefefe;
+  }
+
+  body>p {
     max-width: 600px;
     display: inline-block;
     text-align: left;
     word-spacing: 2px;
   }
-
-  body {
-    text-align: center;
-    background-color: #fafafa;
+  hr {
+    max-width: 600px;
+    margin: 30px auto;
   }
-
+  a {
+    display: block;
+    color:rgba(0,0,0,0.95);
+    text-decoration: none;
+    -webikt-text-decoration: none;
+    text-shadow: 0px 2px 5px rgba(0,0,0,0.2);
+  }
+  a > strong {
+    color:#0059ff;
+  }
   ul {
     padding: 0;
   }
 </style>
+
 </html>
