--- a/index.html
+++ b/index.html
@@ -11,24 +11,40 @@
 <body>
   <h1>JHIH-CING LI 李至青</h1>
   <h3>Web Developer in Tainan, Taiwan</h3>
-  <p>I am a student major in CS, NCKU and a web developer currently living in Tainan, Tainan. My interests range from photography
-    to graphic design. And I focus on web development.
-  </p>
-  <a href="mailto:dino8556@gmail.com">
-    <strong>Contact Me</strong>
-  </a>
   <hr>
-  <h3>Projects</h3>
+  <h3>Selected Projects</h3>
   <ul>
     <li>
       <a href="https://minedia.info">
-        Minedia
+        <strong>Minedia</strong>
       </a>
+      <div>Reported by Taipei Broadcasting Station</div>
+      <div>Best undergraduate project of CSIE, NCKU 2017</div>
+      <span>Data visualization in D3.js</span>
+      <span>Crawlers in Python scrapy</span>
+      <span>SEO</span>
       <p>
         Discover the trending news in Taiwan, Analysis the medias and Realize their viewpoint.
       </p>
     </li>
+    <li>
+      <a href="https://www.taiwanstat.com/vp-tainan/disaster_report.html">
+        <strong>Disaster potential map of Tainan</strong>
+      </a>
+      <div>Get more than 1000 shares on facebook</div>
+      <div>Shared by the official department of open data, Tainan</div>
+      <span>Leaflet.js</span>
+      <span>Geocoding API by Google</span>
+      <span>Semantic UI</span>
+      <p>
+        A report about potential of soil liquefaction, flooding and Landslide in Tainan. Including a interactive map and strategy
+        for people living in danger place.
+      </p>
+    </li>
   </ul>
+  <a href="mailto:dino8556@gmail.com">
+    <strong>Contact Me</strong>
+  </a>
 </body>
 <style>
   * {
@@ -49,28 +65,46 @@
     background-color: #fefefe;
   }
 
-  body>p {
+  p {
     max-width: 600px;
-    display: inline-block;
     text-align: left;
     word-spacing: 2px;
   }
+
   hr {
     max-width: 600px;
     margin: 30px auto;
   }
+
   a {
     display: block;
-    color:rgba(0,0,0,0.95);
+    color: rgba(0, 0, 0, 0.95);
+    margin: 8px 0;
     text-decoration: none;
     -webikt-text-decoration: none;
-    text-shadow: 0px 2px 5px rgba(0,0,0,0.2);
   }
-  a > strong {
-    color:#0059ff;
+
+  a>strong {
+    color: #0059ff;
   }
+
   ul {
     padding: 0;
+    text-align: left;
+    margin: 0 auto 48px auto;
+    display: inline-block;
+  }
+
+  li {
+    margin-top: 36px;
+  }
+
+  span {
+    padding: 2px 8px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    margin: 4px 2px;
+    display: inline-block;
   }
 </style>
 
