Add ga and update conent

--- a/index.html
+++ b/index.html
@@ -5,12 +5,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JHIH-CING LI</title>
+  <title>JHIH-CING LI 李至青</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116932719-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-116932719-1');
+  </script>
 </head>
 
 <body>
   <h1>JHIH-CING LI 李至青</h1>
   <h3>Web Developer in Tainan, Taiwan</h3>
+  <p>
+     I am a web developer passionate about building creative applications, making change happen, and also in my fourth year of
+    studies towards a bachelor's in Computer Sciences.
+  </p>
+  <ul>
+    <li>A Contributor of TaiwanStat, an open Data visualization community in Taiwan has more than 5,000,000 page views in 2015.
+    I well co-working with developers and also mentoring 4 members in TaiwanStat on publishing web visualization project each.
+    </li>
+    <li>Launch project Minedia analyzing the viewpoint of news media, the project is the best undergraduate project of CSIE, NCKU
+    2017 and also reported by Taipei Broadcasting Station.</li>
+    <li>About 2 years experience in web developing and data visualization.</li>
+  </ul>
   <hr>
   <h3>Selected Projects</h3>
   <ul>
