--- a/index.html
+++ b/index.html
@@ -21,16 +21,28 @@
   <h1>JHIH-CING LI 李至青</h1>
   <h3>Web Developer in Tainan, Taiwan</h3>
   <p>
-     I am a web developer passionate about building creative applications, making change happen, and also in my fourth year of
+    I am a web developer passionate about building creative applications, making change happen, and also in my fourth year of
     studies towards a bachelor's in Computer Sciences.
   </p>
   <ul>
-    <li>A Contributor of TaiwanStat, an open Data visualization community in Taiwan has more than 5,000,000 page views in 2015.
-    I well co-working with developers and also mentoring 4 members in TaiwanStat on publishing web visualization project each.
+    <li>
+      <p>
+        A Contributor of TaiwanStat, an open Data visualization community in Taiwan has more than 5,000,000 page views in 2015. I
+        well co-working with developers and also mentoring 4 members in TaiwanStat on publishing web visualization project
+        each.
+      </p>
     </li>
-    <li>Launch project Minedia analyzing the viewpoint of news media, the project is the best undergraduate project of CSIE, NCKU
-    2017 and also reported by Taipei Broadcasting Station.</li>
-    <li>About 2 years experience in web developing and data visualization.</li>
+    <li>
+      <p>
+        Launch project Minedia analyzing the viewpoint of news media, the project is the best undergraduate project of CSIE, NCKU
+        2017 and also reported by Taipei Broadcasting Station.
+      </p>
+    </li>
+    <li>
+      <p>
+        About 2 years experience in web developing and data visualization.
+      </p>
+    </li>
   </ul>
   <hr>
   <h3>Selected Projects</h3>
@@ -90,6 +102,7 @@
     max-width: 600px;
     text-align: left;
     word-spacing: 2px;
+    margin: auto;
   }
 
   hr {
