--- a/index.html
+++ b/index.html
@@ -65,8 +65,33 @@
         for people living in danger place.
       </p>
     </li>
+    <li>
+      <a href="https://www.taiwanstat.com/statistics/lifetime/">
+        <strong>Life is long: the lifetime visualization</strong>
+      </a>
+      <span>D3.js</span>
+      <span>Semantic UI</span>
+      <p>
+        visualizing open data of lifetime with interactive chart.
+      </p>
+    </li>
+    <li>
+      <a href="http://1999.tainan.gov.tw/1999_main_visualization/index.html#overview">
+        <strong>Tainan Open 1999 visualization</strong>
+      </a>
+      <span>D3.js</span>
+      <span>Semantic UI</span>
+      <div>
+        <a href="http://insight.udndata.com/ndapp/udntag/finance/Article?origid=8665564">
+          related news
+        </a>
+      </div>
+      <p>
+        visualizing open data of Tainan Open 1999 with interactive chart.
+      </p>
+    </li>
   </ul>
-  <a href="mailto:dino8556@gmail.com">
+  <a href="mailto:jhihcing.li@gmail.com">
     <strong>Contact Me</strong>
   </a>
 </body>
