--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       </p>
     </li>
   </ul>
+  <a href="https://www.github.com/ching56">
+    <strong>Github</strong>
+  </a>
   <hr>
   <h3>Selected Projects</h3>
   <ul>
