--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>JHIH-CING LI 李至青</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116932719-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date()); gtag('config', 'UA-116932719-1');</script>
 </head>
 
 <body>
-  <h1>JHIH-CING LI 李至青</h1>
+  <!-- 
   <h3>Web Developer in Tainan, Taiwan</h3>
   <p>
     I am a web developer passionate about building creative applications, making change happen, and also in my fourth year of
@@ -96,69 +102,8 @@
   </ul>
   <a href="mailto:jhihcing.li@gmail.com">
     <strong>Contact Me</strong>
-  </a>
+  </a> -->
+  <script type="text/javascript" src="./index.js"></script>
 </body>
-<style>
-  * {
-    /* Times New Roman-based stack */
-    /* https://css-tricks.com/snippets/css/font-stacks/ */
-    font-family: Cambria, "Hoefler Text", Utopia, "Liberation Serif", "Nimbus Roman No9 L Regular", Times, "Times New Roman", serif;
-    opacity: 0.95;
-    letter-spacing: 0.2px;
-  }
-
-  h1,
-  h2 {
-    word-spacing: 4px;
-  }
-
-  body {
-    text-align: center;
-    background-color: #fefefe;
-  }
-
-  p {
-    max-width: 600px;
-    text-align: left;
-    word-spacing: 2px;
-    margin: auto;
-  }
-
-  hr {
-    max-width: 600px;
-    margin: 30px auto;
-  }
-
-  a {
-    display: block;
-    color: rgba(0, 0, 0, 0.95);
-    margin: 8px 0;
-    text-decoration: none;
-    -webikt-text-decoration: none;
-  }
-
-  a>strong {
-    color: #0059ff;
-  }
-
-  ul {
-    padding: 0;
-    text-align: left;
-    margin: 0 auto 48px auto;
-    display: inline-block;
-  }
-
-  li {
-    margin-top: 36px;
-  }
-
-  span {
-    padding: 2px 8px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
-    margin: 4px 2px;
-    display: inline-block;
-  }
-</style>
 
 </html>
