--- a/index.html
+++ b/index.html
@@ -1,109 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-TW">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JHIH-CING LI 李至青</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116932719-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date()); gtag('config', 'UA-116932719-1');</script>
-</head>
-
-<body>
-  <!-- 
-  <h3>Web Developer in Tainan, Taiwan</h3>
-  <p>
-    I am a web developer passionate about building creative applications, making change happen, and also in my fourth year of
-    studies towards a bachelor's in Computer Sciences.
-  </p>
-  <ul>
-    <li>
-      <p>
-        A Contributor of TaiwanStat, an open Data visualization community in Taiwan has more than 5,000,000 page views in 2015. I
-        well co-working with developers and also mentoring 4 members in TaiwanStat on publishing web visualization project
-        each.
-      </p>
-    </li>
-    <li>
-      <p>
-        Launch project Minedia analyzing the viewpoint of news media, the project is the best undergraduate project of CSIE, NCKU
-        2017 and also reported by Taipei Broadcasting Station.
-      </p>
-    </li>
-    <li>
-      <p>
-        About 2 years experience in web developing and data visualization.
-      </p>
-    </li>
-  </ul>
-  <a href="https://www.github.com/ching56">
-    <strong>Github</strong>
-  </a>
-  <hr>
-  <h3>Selected Projects</h3>
-  <ul>
-    <li>
-      <a href="https://minedia.info">
-        <strong>Minedia</strong>
-      </a>
-      <div>Reported by Taipei Broadcasting Station</div>
-      <div>Best undergraduate project of CSIE, NCKU 2017</div>
-      <span>Data visualization in D3.js</span>
-      <span>Crawlers in Python scrapy</span>
-      <span>SEO</span>
-      <p>
-        Discover the trending news in Taiwan, Analysis the medias and Realize their viewpoint.
-      </p>
-    </li>
-    <li>
-      <a href="https://www.taiwanstat.com/vp-tainan/disaster_report.html">
-        <strong>Disaster potential map of Tainan</strong>
-      </a>
-      <div>Get more than 1000 shares on facebook</div>
-      <div>Shared by the official department of open data, Tainan</div>
-      <span>Leaflet.js</span>
-      <span>Geocoding API by Google</span>
-      <span>Semantic UI</span>
-      <p>
-        A report about potential of soil liquefaction, flooding and Landslide in Tainan. Including a interactive map and strategy
-        for people living in danger place.
-      </p>
-    </li>
-    <li>
-      <a href="https://www.taiwanstat.com/statistics/lifetime/">
-        <strong>Life is long: the lifetime visualization</strong>
-      </a>
-      <span>D3.js</span>
-      <span>Semantic UI</span>
-      <p>
-        visualizing open data of lifetime with interactive chart.
-      </p>
-    </li>
-    <li>
-      <a href="http://1999.tainan.gov.tw/1999_main_visualization/index.html#overview">
-        <strong>Tainan Open 1999 visualization</strong>
-      </a>
-      <span>D3.js</span>
-      <span>Semantic UI</span>
-      <div>
-        <a href="http://insight.udndata.com/ndapp/udntag/finance/Article?origid=8665564">
-          related news
-        </a>
-      </div>
-      <p>
-        visualizing open data of Tainan Open 1999 with interactive chart.
-      </p>
-    </li>
-  </ul>
-  <a href="mailto:jhihcing.li@gmail.com">
-    <strong>Contact Me</strong>
-  </a> -->
-  <script type="text/javascript" src="./index.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="zh-TW"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>JHIH-CING LI 李至青</title>  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-116932719-1"></script> <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-116932719-1");</script> <link rel="stylesheet" href="/src.2246bdd6.css"></head> <body> <script type="text/javascript" src="/src.5d74417b.js"></script> </body> </html>
